--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'btn-primary': '#B68C5A',
+                        'color1': '#707070',
                     }
                 }
             }
@@ -51,10 +53,78 @@
 
 <body>
     <!-- header section -->
-    <header>
+    <header class="container mx-auto lg:px-48">
+
+        <!-- navbar -->
         <nav>
-            
+            <div class="navbar bg-base-100 poppins">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                            <li><a class="text-color1 font-medium text-base ">Home </a></li>
+                            <li><a class="text-color1 font-medium text-base ">Services<i
+                                        class="fa-solid fa-greater-than pt-1"></i></a></li>
+                            <li><a class="text-color1 font-medium text-base ">Cases<i
+                                        class="fa-solid fa-greater-than pt-1"></i></a></li>
+                            <li><a class="text-color1 font-medium text-base ">Blog<i
+                                        class="fa-solid fa-greater-than pt-1"></i></a></li>
+                            <li><a class="text-color1 font-medium text-base ">Contact Us <i
+                                        class="fa-solid fa-greater-than pt-1"></i></a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-xl eb-garamond">
+                        <img class="w-28 md:w-auto" src="images/logo2.png" alt="">
+                        </a>
+                </div>
+
+                <!--list items  -->
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1 ">
+
+                        <li><a class="text-color1 font-medium text-base ">Home </a></li>
+                        <li><a class="text-color1 font-medium text-base ">Services<i
+                                    class="fa-solid fa-greater-than pt-1"></i></a></li>
+                        <li><a class="text-color1 font-medium text-base ">Cases<i
+                                    class="fa-solid fa-greater-than pt-1"></i></a></li>
+                        <li><a class="text-color1 font-medium text-base ">Blog<i
+                                    class="fa-solid fa-greater-than pt-1"></i></a></li>
+                        <li><a class="text-color1 font-medium text-base ">Contact Us <i
+                                    class="fa-solid fa-greater-than pt-1"></i></a></li>
+                        <!-- <li><a>Home</a></li>
+                        <li><a>Home</a></li>
+                        <li><a>Home</a></li> -->
+                        <!-- <li>
+                            <details>
+                                <summary>Parent</summary>
+                                <ul class="p-2">
+                                    <li><a>Submenu 1</a></li>
+                                    <li><a>Submenu 2</a></li>
+                                </ul>
+                            </details>
+                        </li> -->
+
+                    </ul>
+                </div>
+
+                <!-- button -->
+                <div class="navbar-end">
+                    <a class="btn bg-btn-primary text-white text-xs md:text-sm">Free Consultation</a>
+                </div>
+            </div>
         </nav>
+
+   
+
+
+
     </header>
 
     <!-- main section -->
