banner section done

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <a class="btn btn-ghost text-xl eb-garamond">
                         <img class="w-28 md:w-auto" src="images/logo2.png" alt="">
-                        </a>
+                    </a>
                 </div>
 
                 <!--list items  -->
@@ -121,14 +121,75 @@
             </div>
         </nav>
 
-   
+        <!-- banner section -->
+
+  <section class="poppins">
+    <div class="card bg-base-100 image-full  shadow-xl">
+        <figure>
+            <img src="images/banner.png" alt="">
+        </figure>
+
+        <div class="z-10 w-6/12 mx-auto text-center flex flex-col justify-center">
+            <h1 class="text-white md:text-3xl lg:text-6xl font-bold eb-garamond mt-2 lg:mt-0">We Provide Effective Legal Solutions</h1>
+            <p class="text-white my-3 lg:mt-5 lg:mb-7 text-xs lg:text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour.</p>
+            <div class="lg:flex">
+
+                <input type="text" placeholder="Search your services" class="input hidden lg:block lg:w-8/12 mr-5  mb-5 lg:mb-0 " />
+                <button class="btn bg-btn-primary border-none font-bold text-white text-base px-10 mb-5 lg:mb-0">Search</button>
+            </div>
+
+        </div>
+
+  </section>
+
+            <!-- <div class="card-body">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary">Buy Now</button>
+              </div> -->
+        </div>
+        </div>
+
+
+        <!-- <section class="poppins">
+            <div class=" card bg-gradient-to-r from-[#111111FF] to-[#111111]   shadow-xl">
+
+                <div class=" image-full ">
+
+                    <img class="" src="images/banner.png" alt="Shoes" />
+                </div>
+
+
+                <div class="w-7/12 text-center mx-auto card">
+                    <h1 class="text-white text-6xl font-bold eb-garamond">We Provide Effective Legal Solutions</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
+
+                    <div class="">
+                        <input type="text" placeholder="Search your services" class="input  w-8/12" />
+                        <button
+                            class="btn bg-btn-primary border-none font-bold text-white text-base px-10">Search</button>
+                    </div>
+
+                </div>
+
+                <div class="card-body ">
+
+
+                </div>
+            </div>
+        </section> -->
+
+
 
 
 
     </header>
 
     <!-- main section -->
-    <main></main>
+    <main class=""></main>
 
 
     <!-- footer section -->
