--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+
     <!-- font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,6 +42,7 @@
                         clifford: '#da373d',
                         'btn-primary': '#B68C5A',
                         'color1': '#707070',
+
                     }
                 }
             }
@@ -122,74 +124,162 @@
         </nav>
 
         <!-- banner section -->
+        <section class="poppins">
+            <div class="card bg-base-100 image-full  shadow-xl">
 
-  <section class="poppins">
-    <div class="card bg-base-100 image-full  shadow-xl">
-        <figure>
-            <img src="images/banner.png" alt="">
-        </figure>
+                <!-- img -->
+                <figure>
+                    <img src="images/banner.png" alt="">
+                </figure>
 
-        <div class="z-10 w-6/12 mx-auto text-center flex flex-col justify-center">
-            <h1 class="text-white md:text-3xl lg:text-6xl font-bold eb-garamond mt-2 lg:mt-0">We Provide Effective Legal Solutions</h1>
-            <p class="text-white my-3 lg:mt-5 lg:mb-7 text-xs lg:text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour.</p>
-            <div class="lg:flex">
-
-                <input type="text" placeholder="Search your services" class="input hidden lg:block lg:w-8/12 mr-5  mb-5 lg:mb-0 " />
-                <button class="btn bg-btn-primary border-none font-bold text-white text-base px-10 mb-5 lg:mb-0">Search</button>
-            </div>
-
-        </div>
-
-  </section>
-
-            <!-- <div class="card-body">
-              <h2 class="card-title">Shoes!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Buy Now</button>
-              </div> -->
-        </div>
-        </div>
-
-
-        <!-- <section class="poppins">
-            <div class=" card bg-gradient-to-r from-[#111111FF] to-[#111111]   shadow-xl">
-
-                <div class=" image-full ">
-
-                    <img class="" src="images/banner.png" alt="Shoes" />
-                </div>
-
-
-                <div class="w-7/12 text-center mx-auto card">
-                    <h1 class="text-white text-6xl font-bold eb-garamond">We Provide Effective Legal Solutions</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <!-- text container -->
+                <div class="z-10 w-6/12 mx-auto text-center flex flex-col justify-center">
+                    <h1 class="text-white md:text-3xl lg:text-6xl font-bold eb-garamond mt-2 lg:mt-0">We Provide
+                        Effective Legal Solutions</h1>
+                    <p class="text-white my-3 lg:mt-5 lg:mb-7 text-xs lg:text-base">There are many variations of
+                        passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.</p>
+                    <div class="lg:flex">
 
-                    <div class="">
-                        <input type="text" placeholder="Search your services" class="input  w-8/12" />
+                        <input type="text" placeholder="Search your services"
+                            class="input hidden lg:block lg:w-8/12 mr-5  mb-5 lg:mb-0 " />
                         <button
-                            class="btn bg-btn-primary border-none font-bold text-white text-base px-10">Search</button>
+                            class="btn bg-btn-primary border-none font-bold text-white text-base px-10 mb-5 lg:mb-0">Search</button>
                     </div>
 
                 </div>
-
-                <div class="card-body ">
-
-
-                </div>
             </div>
-        </section> -->
-
-
-
-
-
+        </section>
     </header>
 
     <!-- main section -->
-    <main class=""></main>
+    <main class="">
+
+        <!-- legal area section -->
+        <section class="poppins container mx-auto lg:px-48 my-24  w-11/12">
+
+            <div class="text-center w-8/12 mx-auto">
+                <h1 class="eb-garamond font-bold text-3xl">The Legal Practice Area</h1>
+                <p class="text-base text-color1 font-light mt-6 mb-20">There are many variations of passages of Lorem
+                    Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 md:gap-0">
+                <div class="stats rounded-none border lg:border-b px-6 ">
+                    <div class="stat flex flex-col text-center items-center ">
+                        <div class="stat-figure text-secondary">
+                            <img src="images/business.png" />
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the majority have suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                        <div class="w-6 h-6 rounded-full bg-btn-primary flex justify-center items-center">
+                            <i class="fa-solid fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stats rounded-none border lg:border  px-6 bg-gradient-to-b from-[#F3F3F3] to-[#f3f3f300] ">
+                    <div class="stat flex flex-col text-center items-center ">
+                        <div class="stat-figure text-secondary">
+                            <img src="images/business.png" />
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the majority have suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                        <div class="w-6 h-6 rounded-full bg-btn-primary flex justify-center items-center">
+                            <i class="fa-solid fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stats rounded-none border lg:border-b  px-6">
+                    <div class="stat flex flex-col text-center items-center  ">
+                        <div class="stat-figure text-secondary ">
+                            <img src="images/business.png" />
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the majority have suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                        <div class="w-6 h-6 rounded-full bg-btn-primary flex justify-center items-center">
+                            <i class="fa-solid fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stats rounded-none border px-6  ">
+                    <div class="stat flex flex-col text-center items-center ">
+                        <div class="stat-figure text-secondary">
+                            <img src="images/business.png" />
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the majority have suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                        <div class="w-6 h-6 rounded-full bg-btn-primary flex justify-center items-center">
+                            <i class="fa-solid fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stats rounded-none border px-6  lg:border-t-0 lg:border-x ">
+                    <div class="stat flex flex-col text-center items-center ">
+                        <div class="stat-figure text-secondary">
+                            <img src="images/business.png" />
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the majority have suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                        <div class="w-6 h-6 rounded-full bg-btn-primary flex justify-center items-center">
+                            <i class="fa-solid fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="stats rounded-none border px-6 ">
+                    <div class="stat flex flex-col text-center items-center ">
+                        <div class="stat-figure text-secondary">
+                            <img src="images/business.png" />
+                        </div>
+                        <div>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but the majority have suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                        <div class="w-6 h-6 rounded-full bg-btn-primary flex justify-center items-center">
+                            <i class="fa-solid fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </section>
+
+
+    </main>
 
 
     <!-- footer section -->
