--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
     </header>
 
     <!-- main section -->
-    <main class="">
+    <main class="poppins">
 
         <!-- legal area section -->
-        <section class="poppins container mx-auto lg:px-48 my-24  w-11/12">
+        <section class=" container mx-auto lg:px-48 my-24  w-11/12">
 
             <div class="text-center w-8/12 mx-auto">
                 <h1 class="eb-garamond font-bold text-3xl">The Legal Practice Area</h1>
@@ -277,6 +277,151 @@
 
 
         </section>
+
+
+
+        <!-- client section -->
+        <section>
+
+            <!-- card title -->
+            <div class="text-center w-6/12 mx-auto">
+                <h1 class="eb-garamond font-bold text-3xl">The Legal Practice Area</h1>
+                <p class="text-base text-color1 font-normal mt-6 mb-10">There are many variations of passages of Lorem
+                    Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+           <!-- carousel section -->
+            <div class="carousel w-full">
+
+    
+                  <!-- slide1 -->
+                <div id="slide1" class="carousel-item h-[500px] relative w-full bg-[url('images/slider-1.jpg')] bg-center bg-cover">
+                    <div class="bg-[#111111CC] flex flex-col justify-center items-center">
+
+                        <!-- text -->
+                        <div class="text-white  text-center w-7/12 mx-auto ">
+                            <div class="avatar bg-gray-600 rounded-full p-1">
+                                <div class="w-24 rounded-full ">
+                                    <img src="images/Picture of Uzzal Mistry (2).jpg" />
+                                </div>
+                            </div>
+                            <h2 class="eb-garamond font-bold text-2xl mt-5 mb-1">Uzzal Mistry</h2>
+                            <h4>UIX Designer</h4>
+                            <p class="mt-8 text-sm md:text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                                roots in a piece of
+                                classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                                McClintock, a
+                                Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+                                Latin words, consectetur.</p>
+
+                                <div class="space-x-1 flex justify-center mt-7">
+                                    <div class="border-2 w-10 border-color1"></div>
+                                    <div class="border-2 w-10"></div>
+                                    <div class="border-2 w-10 border-color1"></div>
+                                </div>
+                        </div>
+                    </div>
+
+
+
+
+
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                  <!-- slide2 -->
+                <div id="slide2" class="carousel-item h-[500px] relative w-full bg-[url('images/slider-2.jpg')] bg-center bg-cover">
+                    <div class="bg-[#111111CC] flex flex-col justify-center items-center">
+
+                        <!-- text -->
+                        <div class="text-white  text-center w-7/12 mx-auto ">
+                            <div class="avatar bg-gray-600 rounded-full p-1">
+                                <div class="w-24 rounded-full ">
+                                    <img src="images/Picture of Uzzal Mistry (2).jpg" />
+                                </div>
+                            </div>
+                            <h2 class="eb-garamond font-bold text-2xl mt-5 mb-1">Uzzal Mistry</h2>
+                            <h4>UIX Designer</h4>
+                            <p class="mt-8 text-sm md:text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                                roots in a piece of
+                                classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                                McClintock, a
+                                Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+                                Latin words, consectetur.</p>
+
+                                <div class="space-x-1 flex justify-center mt-7">
+                                    <div class="border-2 w-10 border-color1"></div>
+                                    <div class="border-2 w-10"></div>
+                                    <div class="border-2 w-10 border-color1"></div>
+                                </div>
+                        </div>
+                    </div>
+
+
+
+
+
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+
+                  <!-- slide3 -->
+                <div id="slide3" class="carousel-item h-[500px] relative w-full bg-[url('images/slider-3.jpg')] bg-center bg-cover">
+                    <div class="bg-[#111111CC] flex flex-col justify-center items-center">
+
+                        <!-- text -->
+                        <div class="text-white  text-center w-7/12 mx-auto ">
+                            <div class="avatar bg-gray-600 rounded-full p-1">
+                                <div class="w-24 rounded-full ">
+                                    <img src="images/Picture of Uzzal Mistry (2).jpg" />
+                                </div>
+                            </div>
+                            <h2 class="eb-garamond font-bold text-2xl mt-5 mb-1">Uzzal Mistry</h2>
+                            <h4>UIX Designer</h4>
+                            <p class="mt-8 text-sm md:text-base">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                                roots in a piece of
+                                classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                                McClintock, a
+                                Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure
+                                Latin words, consectetur.</p>
+
+                                <div class="space-x-1 flex justify-center mt-7">
+                                    <div class="border-2 w-10 border-color1"></div>
+                                    <div class="border-2 w-10"></div>
+                                    <div class="border-2 w-10 border-color1"></div>
+                                </div>
+                        </div>
+                    </div>
+
+
+
+
+
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </section>
+
+
+        <!-- QNA section -->
+        <section></section>
+
+
+        <!-- contact section -->
+        <section></section>
 
 
     </main>
