vs code file delete

--- a/index.html
+++ b/index.html
@@ -158,13 +158,18 @@
         <!-- legal area section -->
         <section class=" container mx-auto lg:px-48 my-24  w-11/12">
 
+
+            <!-- title  -->
             <div class="text-center w-8/12 mx-auto">
                 <h1 class="eb-garamond font-bold text-3xl">The Legal Practice Area</h1>
                 <p class="text-base text-color1 font-light mt-6 mb-20">There are many variations of passages of Lorem
                     Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             </div>
 
+            <!-- cards -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 md:gap-0">
+               
+               <!-- card1 -->
                 <div class="stats rounded-none border lg:border-b px-6 ">
                     <div class="stat flex flex-col text-center items-center ">
                         <div class="stat-figure text-secondary">
@@ -183,13 +188,14 @@
                     </div>
                 </div>
 
+                    <!-- card2 -->
                 <div class="stats rounded-none border lg:border  px-6 bg-gradient-to-b from-[#F3F3F3] to-[#f3f3f300] ">
                     <div class="stat flex flex-col text-center items-center ">
                         <div class="stat-figure text-secondary">
-                            <img src="images/business.png" />
+                            <img src="images/criminal.png" />
                         </div>
                         <div>
-                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Criminal Law</h3>
                             <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
                                 available,
                                 but the majority have suffered
@@ -201,13 +207,14 @@
                     </div>
                 </div>
 
+                    <!-- card3 -->
                 <div class="stats rounded-none border lg:border-b  px-6">
                     <div class="stat flex flex-col text-center items-center  ">
                         <div class="stat-figure text-secondary ">
-                            <img src="images/business.png" />
+                            <img src="images/child.png" />
                         </div>
                         <div>
-                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Child Support</h3>
                             <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
                                 available,
                                 but the majority have suffered
@@ -219,13 +226,14 @@
                     </div>
                 </div>
 
+                    <!-- card4 -->
                 <div class="stats rounded-none border px-6  ">
                     <div class="stat flex flex-col text-center items-center ">
                         <div class="stat-figure text-secondary">
-                            <img src="images/business.png" />
+                            <img src="images/education.png" />
                         </div>
                         <div>
-                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Education Law</h3>
                             <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
                                 available,
                                 but the majority have suffered
@@ -237,13 +245,14 @@
                     </div>
                 </div>
 
+                    <!-- card5 -->
                 <div class="stats rounded-none border px-6  lg:border-t-0 lg:border-x ">
                     <div class="stat flex flex-col text-center items-center ">
                         <div class="stat-figure text-secondary">
-                            <img src="images/business.png" />
+                            <img src="images/divorce.png" />
                         </div>
                         <div>
-                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Divorce Law</h3>
                             <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
                                 available,
                                 but the majority have suffered
@@ -255,13 +264,14 @@
                     </div>
                 </div>
 
+                    <!-- card6 -->
                 <div class="stats rounded-none border px-6 ">
                     <div class="stat flex flex-col text-center items-center ">
                         <div class="stat-figure text-secondary">
-                            <img src="images/business.png" />
+                            <img src="images/tax.png" />
                         </div>
                         <div>
-                            <h3 class="text-2xl font-bold eb-garamond pt-4">Business Law</h3>
+                            <h3 class="text-2xl font-bold eb-garamond pt-4">Tax Law</h3>
                             <p class="text-base color1 py-5">There are many variations of passages of Lorem Ipsum
                                 available,
                                 but the majority have suffered
@@ -285,7 +295,7 @@
 
             <!-- card title -->
             <div class="text-center w-6/12 mx-auto">
-                <h1 class="eb-garamond font-bold text-3xl">The Legal Practice Area</h1>
+                <h1 class="eb-garamond font-bold text-3xl">What Our Client Say</h1>
                 <p class="text-base text-color1 font-normal mt-6 mb-10">There are many variations of passages of Lorem
                     Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             </div>
